<resources>
    <string name="app_name">TrabalhoFinal1</string>
    <string name="inserir" />
    <string name="alterar" />
    <string name="eliminar" />
    <string name="nome" />
    <string name="DataNascimento" />
    <string name="morada" />
    <string name="Cc" />
    <string name="telemovel" />
    <string name="email" />
    <string name="tipoMercadoria" />
    <string name="Peso" />
    <string name="dimensoes" />
    <string name="ClienteID" />
    <string name="localRecolha" />
    <string name="dataPartida" />
    <string name="localEntrega" />
    <string name="dataChegada" />
    <string name="Morada" />
    <string name="guardar" />
    <string name="cancelar" />
    <string name="Nome_obrigatorio" />
    <string name="motorista_guardado_sucesso" />
    <string name="erro_guardar_motorista" />
    <string name="action_settings" />
    <string name="chegada" />
    <string name="client" />
    <string name="mercadoria" />
    <string name="motorista" />
    <string name="partida" />
    <string name="viagem" />
    <string name="menu_principal_label" />
    <string name="lista_chegadas_label" />
    <string name="lista_clientes_label" />
    <string name="lista_mercadorias_label" />
    <string name="lista_viagens_label" />
    <string name="lista_partidas_label" />
    <string name="lista_motoristas_label" />
    <string name="nome_obrigatorio" />
    <string name="dataNascimento_obrigatorio" />
    <string name="morada_obrigatorio" />
    <string name="cc_obrigatorio" />
    <string name="telemovel_obrigatorio" />
    <string name="email_obrigatorio" />
</resources>