<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarMotoristaFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DataNascimento"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMorada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Morada"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Cc"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTelemovel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telemovel"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />



        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>