<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarMercadoriaFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTipoMercadoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipoMercadoria"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Peso"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDimensoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dimensoes"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextClienteID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ClienteID"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>